Refactor environment configuration and enhance security features
- Removed the .env file and updated .env.example with new environment variables.
- Implemented CSRF protection using csrf-sync and added rate limiting for authentication routes.
- Enhanced security by adding Helmet for security headers and disabling the X-Powered-By header.
- Updated server configuration to use environment variables for sensitive data and ports.
- Improved session management with secure cookie settings.
- Cleaned up the app.js file for better readability and organization.

--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,36 @@
-APP_NAME="CAW"
-API_URL="http://localhost/api"
+# Server Configuration
+PORT=3333
+SESSION_SECRET=generate-with-node-crypto-randomBytes-64
+NODE_ENV=development
 
-SEPOLIA_ALCHEMY=""
-MAINNET_ALCHEMY=""
+# Database
+MONGODB_URI=mongodb://127.0.0.1/nodeStream
 
-PINITA_API_KEY=""
-PINITA_API_SECRET=""
+# RTMP Server
+RTMP_PORT=1935
+RTMP_HTTP_PORT=8888
+FFMPEG_PATH=/usr/bin/ffmpeg
+CORS_ORIGIN=http://localhost:3000
 
-OPENSEA=""
+# API Keys (use your own; rotate if ever exposed)
+ALCHEMY_KEY=your-alchemy-key
+INFURA_KEY=your-infura-key
+SENDGRID_API_KEY=your-sendgrid-key
+SENDGRID_MAIL=your-sendgrid-email
 
-BUILD_GENERATE_SOURCEMAPS=true
-BUILD_COMPRESS_GZIP=true
-BUILD_COMPRESS_BROTLI=false
-BUILD_VISUALIZE=true
+# Pinata (IPFS) - prefer server-side usage; add to .env if using from frontend
+PINITA_API_KEY=your-pinata-key
+PINITA_API_SECRET=your-pinata-secret
 
-_DEVELOPER_NAME_BTOA="S1JNUiBURUNI"
-_DEVELOPER_URL_BTOA="aHR0cHM6Ly9rcm1yLmx0ZC8"
+# Network (chain ID, e.g. 11155111 for Sepolia)
+NETWORK_ID=11155111
 
-CONNECTORS="metaMask, walletConnect, injected"
-CHAINS="sepolia-testnet"
-DEFAULT_CHAIN_ID=11155111
+# Cookie expiration (days)
+COOKIE_EXPIRE=7
+COOKIE_EXPIRES_TIME=7
 
+# Optional: Moralis API (only if using NFT/price features; add MORALIS_API_KEY if needed)
+
+# Optional: Developer info (base64-encoded, for WalletConnectorModal)
+DEVELOPER_URL_BTOA=base64-encoded-url-here
+DEVELOPER_NAME_BTOA=base64-encoded-name-here
